--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container">
-        <table class="table" >
+        <table class="table" id="tabledisplay" >
             <thead>
                 <tr>
                 <th scope="col">Model Name</th>
@@ -38,10 +38,10 @@
             </thead>
             <tbody>
                 <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
+                <td id="namedisplay">Lambo Gallardo</td>
+                <td id="destdisplay">Destination</td>
+                <td id="timedisplay">Expected Time</td>
+                <td id="fredisplay">Frequency</td>
                 </tr>
                 </tbody>
         </table>
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="row">
             <div class="col-3"></div>
-            <div class="col-6">
+            <div class="col-6" id="formdisplay">
                 <form>
                     <div class="form-group">
                     <label for="lamboname">Name</label>
@@ -69,7 +69,7 @@
                         <input type="text" class="form-control" id="frequency" placeholder="Frequency">
                     </div>
                     
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button id="submitbutton" type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>    
             <div class="col-3"></div>
